# full-stack-dev

./: .gitignore  README.md  dev-core-101-hello-python.py  hello_you_got_hacked.txt  package-lock.json  tasks.json
MVP-project/: README.md  pyproject.toml
MVP-project/back-end/app/: database.db  main.py
MVP-project/back-end/app/models/: README.md
MVP-project/backend/app/: .env  database.db  main.py
MVP-project/backend/app/database/: db_setup.py
MVP-project/backend/app/functions/: mainLogic.py
MVP-project/backend/app/models/: __init__.py  capsuleBase.py  capsuleBaseModel.py  tokenBase.py  tokenBaseModel.py  userBase.py  userBaseModel.py
MVP-project/backend/app/routers/: UploadRouter.py  capsuleRouters.py  userRouters.py
MVP-project/front-end/gullible-group/: package-lock.json  package.json
MVP-project/front-end/gullible-group/src/: App.jsx
MVP-project/front-end/gullible-group/src/components/: Features.jsx  Footer.jsx  HeroSection.jsx  Registration.jsx
MVP-project/front-end/gullible-group/src/pages/: index.astro
MVP-project/front-end/vite/: components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
MVP-project/front-end/vite-project/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.js
MVP-project/front-end/vite-project/src/: App.css  App.jsx  index.css
MVP-project/front-end/vite-project/src/app/main/: Home.tsx  Register.tsx
MVP-project/front-end/vite-project/src/components/: HeroSection.tsx  HeroSection2.tsx  Login.tsx
MVP-project/front-end/vite/src/: App.css  App.tsx  index.css
MVP-project/front-end/vite/src/app/main/: CapsulePage.tsx  CapsuleStorageContainer.tsx  CreateCapsule.tsx  UserProfile.tsx  capsule-storage.tsx  capsule-tutorial.tsx  home.tsx  login.tsx  register.tsx
MVP-project/front-end/vite/src/app/service/: AuthFetch.ts  Service.ts
MVP-project/front-end/vite/src/components/: CapsuleStorage.tsx  CreateCapsuleForm.tsx  Features.tsx  FileUpload.tsx  Footer.tsx  MyCapsules.tsx  RegisterForm.tsx  ShowUserProfile.tsx  Sidebar.tsx  Tutorial.tsx  login-form.tsx
MVP-project/front-end/vite/src/components/ui/: HeroSectionGuide.tsx
MVP-project/time-capsule/: commands_history.txt
back-end/: README.md
back-end-101/: frameworks_overview.md
back-end-101/final-project/: README.md
back-end-101/lesson-2/: app.py  pyproject.toml
back-end-101/lesson-3/: pyproject.toml
back-end-101/lesson-9/: pyproject.toml
back-end/back-end-101/: pyproject.toml
back-end/back-end-101/final-project/: main.py  pyproject.toml
back-end/back-end-101/lesson-3/my_app/utils/: helpers.py
back-end/back-end-101/lesson-6/: app.py  pyproject.toml
back-end/back-end-101/lesson-7/: README.md
back-end/back-end-102/lesson-11/: main.py  pyproject.toml
back-end/back-end-102/lesson-3/: main.py  pyproject.toml
back-end/back-end-102/lesson-4/: main.py  pyproject.toml
dev-core/: README.md
dev-core-101/: dev-core-101-computer-specs.md  dev-core-101-exercises-js.js  dev-core-101-exercises-python2.py  dev-core-101-finalproject.py  dev-core-101-finalproject2.py  dev-core-101-input-output-python.py  dev-core-101-task-python.py  dev-core-101-variables-js.js
dev-core-102/: final_project_text_adventure.py  task_14_todo_app.py  task_1_clean_code_practice.py  task_2_data_structures.py  task_4_calculate_order.py  task_5_trip_advisor.py  task_6_discount_calculator.py
dev-core-104/: commands.txt  log.txt
dev-ops/: README.md
dev-ops-101/: command_log.txt
front-end/: README.md
front-end-101/: front-end-101_websites_research.md
mvp-project-test/: README.md
other/: Exploring-repositories.md
project/: commands-task.md  project-structure.txt  txt_files_list.txt
scripts/: installed-list.txt  master-script.sh  nginx.sh  users_create.sh
time-capsule/: commands_history.txt  pyproject.toml  readme.txt
time-capsule/data/: info.txt  main.py
time-capsule/docs/: readme.txt
time-capsule/src/: script.sh
(+148 files in other folders)
