[tool.poetry]
name = "time-capsule"
version = "0.1.0"
description = "A time capsule designed to enhance the value of moments through the passage of time."
authors = ["Andruxa8705"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
