[tool.poetry]
name = "lesson-2"
version = "0.1.0"
description = "test"
authors = ["Andrey8705 <Andrey.shadrin.1998@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
