[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Andrey8705 <Andrey.shadrin.1998@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
