[tool.poetry]
name = "lesson-6"
version = "0.1.0"
description = ""
authors = ["Andrey8705 <Andrey.shadrin.1998@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
