[tool.poetry]
name = "lesson-4"
version = "0.1.0"
description = ""
authors = ["Andrey8705 <Andrey.shadrin.1998@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
